fix: fixed bug where input element would be centered relative to div, thus making it missaligned with the rest of the input elements if they were larger in height

--- a/src/main/sass/foundation/style.sass
+++ b/src/main/sass/foundation/style.sass
@@ -165,6 +165,7 @@ html
     .form-area
         position: relative
         margin: 3px
+        align-items: end
 
         .form-label
             width: 80px
